created results page files and linked stylesheets

--- a/results.html
+++ b/results.html
@@ -17,6 +17,6 @@
     
     <!-- Compressed JavaScript link - Foundation -->
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-<script src="./js/scripts.js"></script>
+<script src="./js/display-results.js"></script>
 </body>
 </html>
