--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 
 </head>
 
-
 <body>
+    <!--home page state search bar section-->
+    <div class="searchcontainer">
+        <h2 class="selector-title">Select a State</h2>
+        <select class="searchselector">Select State</select>
+<!--Add JS code for element-->
+        <button class="searchbutton" id="serach-button" type="submit"></button>
+    </div>
     
     <!-- Compressed JavaScript link - Foundation -->
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
