--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
         <h2 class="selector-title">Select a State</h2>
         <select class="searchselector">Select State</select>
 <!--Add JS code for element-->
-        <button class="searchbutton" id="serach-button" type="submit"></button>
+        <button class="searchbutton" id="search-button" type="submit"></button>
     </div>
-    
+
+<!--footer-->
+    <div class="footer">
+        <p><span class="footertxt">National Park Planner</span> by <a href="https://github.com/BrianMorse1
+            ">Brian Morse</a><a href="https://github.com/KlosheKopa
+            ">Aaron Richards</a><a href="https://github.com/bootcamp-Mo">Monique Coelho</a><a href="https://github.com/PhilKubz">Philip Kubisz</a><a href="https://github.com/olynnc888">Olivia Cummings</a>
+        </p>
+    </div>
     <!-- Compressed JavaScript link - Foundation -->
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-<script src="./js/scripts.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
