--- a/results.html
+++ b/results.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National Park Search Resource</title>
     <!-- Compressed CSS link - Foundation -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css"
+        crossorigin="anonymous" />
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
 </head>
 
 
 <body>
-    
+    <!--*  Commented out causing issues right now --->
     <!-- Compressed JavaScript link - Foundation -->
-<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-<script src="./js/display-results.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
+        crossorigin="anonymous"></script> -->
+    <script src="./assets/js/display-results.js"></script>
 </body>
+
 </html>
