Added more js and fixed some things in the index.html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Compressed CSS link - Foundation -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous"/>
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./assets/css/styles.css"/>
 
 </head>
 
@@ -16,7 +16,7 @@
     <!--home page state search bar section-->
     <div class="searchcontainer">
         <h2 class="selector-title">Select a State</h2>
-        <select class="searchselector">Select State</select>
+        <select id="stateSelector" class="searchselector">Select State</select>
 <!--Add JS code for element-->
         <button class="searchbutton" id="search-button" type="submit"></button>
     </div>
@@ -24,12 +24,13 @@
 <!--footer-->
     <div class="footer">
         <p><span class="footertxt">National Park Planner</span> by <a href="https://github.com/BrianMorse1
-            ">Brian Morse</a><a href="https://github.com/KlosheKopa
-            ">Aaron Richards</a><a href="https://github.com/bootcamp-Mo">Monique Coelho</a><a href="https://github.com/PhilKubz">Philip Kubisz</a><a href="https://github.com/olynnc888">Olivia Cummings</a>
+            ">Brian Morse, </a><a href="https://github.com/KlosheKopa
+            ">Aaron Richards, </a><a href="https://github.com/bootcamp-Mo">Monique Coelho, </a><a href="https://github.com/PhilKubz">Philip Kubisz, </a> and <a href="https://github.com/olynnc888">Olivia Cummings</a>
         </p>
     </div>
     <!-- Compressed JavaScript link - Foundation -->
 <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-<script src="./js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
