--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Compressed CSS link - Foundation -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous"/>
     <!-- Custom stylesheet -->
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="assets/css/styles.css"/>
 
 </head>
 
@@ -24,8 +24,8 @@
 <!--footer-->
     <div class="footer">
         <p><span class="footertxt">National Park Planner</span> by <a href="https://github.com/BrianMorse1
-            ">Brian Morse</a><a href="https://github.com/KlosheKopa
-            ">Aaron Richards</a><a href="https://github.com/bootcamp-Mo">Monique Coelho</a><a href="https://github.com/PhilKubz">Philip Kubisz</a><a href="https://github.com/olynnc888">Olivia Cummings</a>
+            ">Brian Morse </a><a href="https://github.com/KlosheKopa
+            ">Aaron Richards </a><a href="https://github.com/bootcamp-Mo">Monique Coelho </a><a href="https://github.com/PhilKubz">Philip Kubisz </a><a href="https://github.com/olynnc888">Olivia Cummings</a>
         </p>
     </div>
     <!-- Compressed JavaScript link - Foundation -->
