--- a/index.html
+++ b/index.html
@@ -13,12 +13,22 @@
 </head>
 
 <body>
+    <body>
+        <!-- Top Section of the Page -->
+        <section class="top-body">
+            <h1 class="nav-top">National Parks Resource Tool</h1>
+            <div class="sub-top">
+                Select a state and find information National Parks located there!
+            </div>
+        </section>
+
+
     <!--home page state search bar section-->
     <div class="searchcontainer">
         <h2 class="selector-title">Select a State</h2>
         <select class="stateselector" id="stateSelector">Select State</select>
 <!--Add JS code for element-->
-        <button class="button" id="search-button" type="submit"></button>
+        <button class="button" id="search-button" type="submit">Search</button>
     </div>
 
 <!--footer-->
