landing page update start

--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
 </head>
 
 <body>
-    <body>
-        <!-- Top Section of the Page -->
-        <section class="top-body">
-            <h1 class="nav-top">National Parks Resource Tool</h1>
-            <div class="sub-top">
-                Select a state and find information National Parks located there!
-            </div>
-        </section>
+    <!-- Top Section of the Page -->
+    <section class="top-body">
+        <h1 class="nav-top">National Parks Resource Tool</h1>
+        <div class="sub-top">
+            Select a state and find information about National Parks located there!
+        </div>
+    </section>
 
 
     <!--home page state search bar section-->
-    <div class="searchcontainer">
+    <div class="searchcontainer align-center">
         <h2 class="selector-title">Select a State</h2>
         <select class="stateselector" id="stateSelector">Select State</select>
 <!--Add JS code for element-->
-        <button class="button" id="search-button" type="submit">Search</button>
+        <button class="button secondary" id="search-button" type="submit">Search</button>
     </div>
 
 <!--footer-->
