--- a/results.html
+++ b/results.html
@@ -17,7 +17,7 @@
 
 <body>
     <div id="parkResults"></div>
-    <div id="parkForcastBox"></div>
+    <div id="parkForecastBox"></div>
     <!--*  Commented out causing issues right now --->
     <!-- Compressed JavaScript link - Foundation -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
