--- a/results.html
+++ b/results.html
@@ -20,9 +20,10 @@
 <body>
     <div class="resultscontainer">
         <h1>Park Results</h1>
-        <div class="callout warning" id="parkResults"></div>
+        <div id="apiResults"></div>
+        <!--<div class="callout warning" id="parkResults"></div>
         <div class="callout primary" id="parkForecastBox"></div>
-        <!--*  Commented out causing issues right now --->
+        <!--*  Commented out causing issues right now ---
         <!-- Compressed JavaScript link - Foundation -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
             crossorigin="anonymous"></script> -->
