--- a/results.html
+++ b/results.html
@@ -24,7 +24,7 @@
         <!--<div class="callout warning" id="parkResults"></div>
         <div class="callout primary" id="parkForecastBox"></div>
         <!--*  Commented out causing issues right now ---
-        <!-- Compressed JavaScript link - Foundation -->
+        <!--* Compressed JavaScript link - Foundation -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
             crossorigin="anonymous"></script> -->
     </div>
