added link with styling

--- a/results.html
+++ b/results.html
@@ -20,6 +20,7 @@
 <body>
     <div class="resultscontainer">
         <h1>Park Results</h1>
+        <a href="/index.html" class="go-back">Go Back</a>
         <div id="apiResults"></div>
         <!--<div class="callout warning" id="parkResults"></div>
         <div class="callout primary" id="parkForecastBox"></div>
