--- a/results.html
+++ b/results.html
@@ -20,10 +20,13 @@
 <body>
     <div class="resultscontainer">
         <h1>Park Results</h1>
-        <a href="/index.html" class="go-back">Go Back</a>
+        <a href="/index.html" class="go-back button secondary">Go Back</a>
         <div id="apiResults"></div>
+
+        <!-- This is what is generated in our JS using Foundation basic styling for divs-->
         <!--<div class="callout warning" id="parkResults"></div>
         <div class="callout primary" id="parkForecastBox"></div>
+        
         <!--*  Commented out causing issues right now ---
         <!--* Compressed JavaScript link - Foundation -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
