--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Top Section of the Page -->
-    <section class="top-body">
+    <section class="top-body callout warning">
         <h1 class="nav-top">National Parks Resource Tool</h1>
         <div class="sub-top">
             Select a state and find information about National Parks located there!
@@ -29,9 +29,9 @@
 
 
     <!--home page state search bar section-->
-    <div class="searchcontainer align-center">
+    <div class="searchcontainer align-center callout warning">
         <h2 class="selector-title">Select a State</h2>
-        <select class="stateselector" id="stateSelector">Select State</select>
+        <select  title="State-Selector" class="stateselector" id="stateSelector">Select State</select>
 <!--Add JS code for element-->
         <button class="button secondary" id="search-button" type="submit">Search</button>
     </div>
