--- a/results.html
+++ b/results.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="resultscontainer">
-        <h1>Park Results</h1>
+        <div class="top callout warning"><h1>Park Results</h1></div>
         <a href="/index.html" class="go-back button secondary">Go Back</a>
         <div id="apiResults"></div>
 
