--- a/results.html
+++ b/results.html
@@ -20,7 +20,7 @@
 <body>
     <div class="resultscontainer">
         <div class="top callout warning"><h1>Park Results</h1></div>
-        <a href="/index.html" class="go-back button secondary">Go Back</a>
+        <a href="https://bootcamp-mo.github.io/National-Park-Search-Resource/" class="go-back button secondary">Go Back</a>
         <div id="apiResults"></div>
 
         <!-- This is what is generated in our JS using Foundation basic styling for divs-->
